[gd_scene load_steps=16 format=3 uid="uid://bf7s15odfx42p"]

[ext_resource type="FontFile" uid="uid://b6btjltaqm0o5" path="res://Assets/alagard.ttf" id="1_h7f34"]
[ext_resource type="Texture2D" uid="uid://cpawchx7gxheo" path="res://Assets/Sprites/UI Kit/Panel/panel-016.png" id="1_h8t3h"]
[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="1_meqjp"]
[ext_resource type="Texture2D" uid="uid://e876hmqu6o33" path="res://Assets/Sprites/UI Kit/Panel/panel-015.png" id="2_7iwdm"]
[ext_resource type="Texture2D" uid="uid://d62cml6q3e8" path="res://Assets/Sprites/UI Kit/Transparent center/panel-transparent-center-015.png" id="2_dofw0"]
[ext_resource type="Texture2D" uid="uid://b1x0prjeqax4r" path="res://Assets/Sprites/UI Kit/panel-015.png" id="6_qk6qm"]
[ext_resource type="Texture2D" uid="uid://cbf6gskkgjkl2" path="res://Assets/Sprites/UI Kit/panel-border-015.png" id="7_omr1p"]
[ext_resource type="Texture2D" uid="uid://c6ki4hcavotfm" path="res://Assets/Sprites/UI Kit/Panel/panel-008.png" id="8_qw3d5"]
[ext_resource type="Script" path="res://Scripts/menu_button.gd" id="9_mdw37"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6iqpp"]
texture = ExtResource("1_h8t3h")
texture_margin_left = 40.0
texture_margin_top = 40.0
texture_margin_right = 40.0
texture_margin_bottom = 40.0
modulate_color = Color(0.4459, 0.49, 0.481915, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j81g5"]
texture = ExtResource("2_dofw0")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dbg4x"]
texture = ExtResource("2_7iwdm")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eoi7e"]
texture = ExtResource("8_qw3d5")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0
modulate_color = Color(0.81, 0.822, 0.9, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q71qx"]
texture = ExtResource("8_qw3d5")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ge26l"]
texture = ExtResource("8_qw3d5")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0
modulate_color = Color(0.158472, 0.158472, 0.158472, 1)

[node name="Settings Menu" type="Control"]
z_index = 50
layout_direction = 2
layout_mode = 3
anchors_preset = 0
offset_left = -575.0
offset_top = -324.0
offset_right = -575.0
offset_bottom = -324.0
auto_translate = false
localize_numeral_system = false
script = ExtResource("1_meqjp")

[node name="Panel" type="Panel" parent="."]
light_mask = 2
layout_mode = 0
offset_left = -383.0
offset_top = -296.0
offset_right = -343.0
offset_bottom = -256.0
scale = Vector2(48.7171, 43.5528)

[node name="Menu Items" type="Panel" parent="."]
light_mask = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 20.0
offset_right = 864.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6iqpp")

[node name="MarginContainer" type="MarginContainer" parent="Menu Items"]
light_mask = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Menu Items/MarginContainer"]
light_mask = 2
layout_mode = 2

[node name="Label" type="Label" parent="Menu Items/MarginContainer/VBoxContainer"]
light_mask = 2
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Menu Items/MarginContainer/VBoxContainer"]
light_mask = 2
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 35
text = "Audio"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu Items/MarginContainer/VBoxContainer"]
light_mask = 2
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer"]
light_mask = 2
layout_mode = 2

[node name="Label2" type="Label" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
light_mask = 2
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 25
text = "Master"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label" type="Label" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
light_mask = 2
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 25
text = "Sound Effects"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label3" type="Label" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
light_mask = 2
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 25
text = "Music"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer"]
light_mask = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="Master Slider" type="HSlider" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/slider = SubResource("StyleBoxTexture_j81g5")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_dbg4x")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_dbg4x")
max_value = 1.0
step = 0.001

[node name="Sounds Slider" type="HSlider" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/slider = SubResource("StyleBoxTexture_j81g5")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_dbg4x")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_dbg4x")
max_value = 1.0
step = 0.001

[node name="Music Slider" type="HSlider" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/slider = SubResource("StyleBoxTexture_j81g5")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_dbg4x")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_dbg4x")
max_value = 1.0
step = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu Items/MarginContainer/VBoxContainer"]
light_mask = 2
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer2"]
light_mask = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
light_mask = 2
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 35
text = "Video
"
horizontal_alignment = 1
vertical_alignment = 2

[node name="FullScreen Toggle" type="CheckButton" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
light_mask = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 50
theme_override_constants/check_v_offset = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 25
theme_override_icons/checked = ExtResource("6_qk6qm")
theme_override_icons/unchecked = ExtResource("7_omr1p")
text = "FullScreen"
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer2"]
light_mask = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
light_mask = 2
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 35
text = "Language
"
horizontal_alignment = 1
vertical_alignment = 2

[node name="OptionButton" type="OptionButton" parent="Menu Items/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
light_mask = 2
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_constants/arrow_margin = 15
theme_override_constants/modulate_arrow = 0
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 28
alignment = 1
item_count = 2
selected = 1
allow_reselect = true
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "العربية"
popup/item_1/id = 1

[node name="Menu Button3" type="Button" parent="Menu Items/MarginContainer/VBoxContainer"]
light_mask = 2
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_h7f34")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_eoi7e")
theme_override_styles/hover = SubResource("StyleBoxTexture_q71qx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ge26l")
text = "Return"
script = ExtResource("9_mdw37")
load_scene = null
unload_scenes = Array[NodePath]([NodePath("../../../..")])

[connection signal="value_changed" from="Menu Items/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Master Slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Menu Items/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Sounds Slider" to="." method="_on_sounds_slider_value_changed"]
[connection signal="value_changed" from="Menu Items/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Music Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="Menu Items/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/FullScreen Toggle" to="." method="_on_full_screen_toggle_toggled"]
[connection signal="item_selected" from="Menu Items/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Menu Items/MarginContainer/VBoxContainer/Menu Button3" to="Menu Items/MarginContainer/VBoxContainer/Menu Button3" method="_on_pressed"]
